@@ -1,29 +1,9 @@
 {
-  "count": 5,
-  "uniques": 5,
+  "count": 1,
+  "uniques": 1,
   "clones": [
     {
-      "timestamp": "2025-03-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-03-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-03-12T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-03-15T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-03-18T00:00:00Z",
+      "timestamp": "2025-03-21T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
